--- a/2dplanpage.html
+++ b/2dplanpage.html
@@ -9,7 +9,7 @@
  <header>
   <flexbox>
     <div class="navbar">
-        <img src="logo2.png" alt="logo" class="logo">
+        <img src="pictures used/logo2.png" alt="logo" class="logo">
       <a href="homepage.html" class="button">Home</a>
       <a href="2dplanpage.html" class="button button-pink">2D Plan</a>
       <a href="3dversions.html" class="button button-blue">3D Version</a>
@@ -23,15 +23,15 @@
 <body>
   <div class="slideshow-container">
     <div class="mySlides">
-      <img src="Image1.png" alt="Image 1">
+      <img src="pictures used/Image1.png" alt="Image 1">
     </div>
 
     <div class="mySlides">
-      <img src="Image2.png" alt="Image 2">
+      <img src="pictures used/Image2.png" alt="Image 2">
     </div>
 
     <div class="mySlides">
-      <img src="Image3.png" alt="Image 3">
+      <img src="pictures used/Image3.png" alt="Image 3">
     </div>
   </div>
 
@@ -60,13 +60,13 @@
     
   <div class="footeri">
       <div class="info"> 
-          <p> <img src="location_icon.png" alt="location"  class="check-in">    Ferizaj 70000 <br>
-             <img src="gmail_icon.png" alt="gmail" class="gmail"> uniproject.ing@gmail.com 
+          <p> <img src="pictures used/location_icon.png" alt="location"  class="check-in">    Ferizaj 70000 <br>
+             <img src="pictures used/gmail_icon.png" alt="gmail" class="gmail"> uniproject.ing@gmail.com 
          </p>
          <p>
-             <img src="phone_icon.png" alt="phone" class="numri"> 044120415 
+             <img src="pictures used/phone_icon.png" alt="phone" class="numri"> 044120415 
             <br>
-           <img src="whatsapp_icon.png" alt="whatsapp" class="whatsapp"> +383441204
+           <img src="pictures used/whatsapp_icon.png" alt="whatsapp" class="whatsapp"> +383441204
           </p>
          
        </div>
