--- a/login.html
+++ b/login.html
@@ -1,110 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="projekti.css">
-  <title>Login</title>
-  <style>
-    body {
-      background-image: url('architectural-design-header.jpg');
-      background-size: cover;
-      background-position: center;
-      font-family: 'Arial', sans-serif;
-      background-color: #f0f0f0;
-      margin: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="projekti.css" />
+    <title>Login</title>
+    <style>
+      body {
+        background-image: url(pictures\ used/architectural-design-header.jpg);
+        background-size: cover;
+        background-position: center;
+        font-family: "Arial", sans-serif;
+        background-color: #f0f0f0;
+        margin: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+      }
 
-    .login-container {
-      background-color: #fff;
-      padding: 30px;
-      border-radius: 8px;
-      box-shadow: 0 0 50px rgba(10, 9, 9, 0.897);
-      text-align: center;
-      margin: 0 auto;
-    }
+      .login-container {
+        background-color: #fff;
+        padding: 30px;
+        border-radius: 8px;
+        box-shadow: 0 0 50px rgba(10, 9, 9, 0.897);
+        text-align: center;
+        margin: 0 auto;
+      }
 
-    .login-container h2 {
-      color: #333;
-      margin: 10px;
-    }
+      .login-container h2 {
+        color: #333;
+        margin: 10px;
+      }
 
-    .login-form {
-      margin-top: 20px;
-    }
-    .usernamebox label {
-  display: block;
-  margin-bottom: 5px;
-}
+      .login-form {
+        margin-top: 20px;
+      }
+      .usernamebox label {
+        display: block;
+        margin-bottom: 5px;
+      }
 
-.usernamebox input[type="text"] {
+      .usernamebox input[type="text"] {
+        width: calc(100% - 20px);
+        padding: 8px;
+        margin-bottom: 10px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+      }
 
-  width: calc(100% - 20px);
-  padding: 8px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
+      .passwordbox label {
+        display: block;
+        margin-bottom: 5px;
+      }
 
-.passwordbox label {
-  display: block;
-  margin-bottom: 5px;
-}
-
-.passwordbox input[type="password"] {
-  width: calc(100% - 20px);
-  padding: 8px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-.login-form button {
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-.login-form button:hover {
-  background-color: #0056b3;
-}
-  </style>
-</head>
-<body>
-
-  <div class="login-container">
-    <h2>Login</h2>
-    <form class="login-form" action="/login" method="post" onsubmit="redirectToHomepage(event)">
-      <div class="form-group">
-        <div class="usernamebox">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required>
-      </div>
+      .passwordbox input[type="password"] {
+        width: calc(100% - 20px);
+        padding: 8px;
+        margin-bottom: 10px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+      }
+      .login-form button {
+        padding: 10px 20px;
+        background-color: #007bff;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+      .login-form button:hover {
+        background-color: #0056b3;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="login-container">
+      <h2>Login</h2>
+      <form
+        class="login-form"
+        action="/login"
+        method="post"
+        onsubmit="redirectToHomepage(event)"
+      >
+        <div class="form-group">
+          <div class="usernamebox">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required />
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="passwordbox">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required />
+          </div>
+        </div>
+        <div class="form-group">
+          <button type="submit">Login</button>
+        </div>
+      </form>
     </div>
-      <div class="form-group">
-        <div class="passwordbox">
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-      </div>
-    </div>
-      <div class="form-group">
-        <button type="submit">Login</button>
-      </div>
-    </form>
-  </div>
-  
-  <script>
-    function redirectToHomepage(event) {
-      event.preventDefault(); 
-      window.location.href = 'homepage.html';
-    }
-  </script>
-  
 
-</body>
+    <script>
+      function redirectToHomepage(event) {
+        event.preventDefault();
+        window.location.href = "homepage.html";
+      }
+    </script>
+  </body>
 </html>
