--- a/register.html
+++ b/register.html
@@ -7,7 +7,7 @@
   <title>Register</title>
   <style>
     body {
-      background-image: url('architectural-design-header.jpg');
+      background-image: url(pictures\ used/architectural-design-header.jpg);
       background-size: cover;
       background-position: center;
       font-family: 'Arial', sans-serif;
