--- a/homepage.html
+++ b/homepage.html
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+<div class="home">
   <div class="slideshow-container">
     <div class="mySlides">
       <img src="pictures used/Image1.png" alt="Image 1">
@@ -35,6 +36,34 @@
     <div class="mySlides">
       <img src="pictures used/Image3.png" alt="Image 3">
     </div>
+  </div>
+  <p class="introduction"> <h2> Welcome to Uniproject!</h2> At Uniproject, we believe in turning dreams into spaces, and ideas into structures. As architects, we embark on a journey of creativity and innovation, shaping environments that inspire and elevate the human experience. 
+    <br>
+        Our Vision 
+        <br>
+        Our vision is to redefine the way we live and interact with our surroundings. We envision spaces that blend form and function seamlessly, where aesthetics meet practicality, and where every design tells a unique story.
+        <br>
+        Innovative Design:
+        <br>
+        Explore a world of cutting-edge design concepts tailored to meet your specific needs. We strive to push the boundaries of traditional architecture, creating spaces that not only stand out but stand the test of time.
+        <br>
+        Client-Centric Approach:
+        <br>
+        Your vision is at the heart of our designs. We collaborate closely with our clients, ensuring that every project reflects their aspirations and requirements. Your satisfaction is our top priority.
+        <br>
+        Sustainable Solutions:
+        <br>
+        We are committed to sustainable architecture, integrating eco-friendly practices into our designs. From energy-efficient structures to environmentally conscious materials, we aim to contribute to a greener, more sustainable future.
+        <br>
+        Our Portfolio
+        <br>
+        Discover the diversity of our portfolio, showcasing a range of projects from residential masterpieces to innovative commercial spaces. Each project is a testament to our dedication to excellence and passion for creating remarkable architecture.
+        <br>
+        Let's Create Together
+        <br>
+        Whether you're planning your dream home, envisioning a dynamic workspace, or conceptualizing a community space, we're here to bring your ideas to life. Explore our portfolio, learn about our process, and let's embark on a journey of architectural exploration together.
+        <br>
+        Welcome to Uniproject—where vision meets reality. </p>
   </div>
 
   <script>
@@ -56,6 +85,8 @@
       setTimeout(showSlides, 2000);
     }
   </script>
+
+  
 
 </body>
 <footer>
