--- a/homepage.html
+++ b/homepage.html
@@ -44,7 +44,9 @@
       <h2 id="title2"> Our Vision</h2>
       <p id="text2">  Our vision is to redefine the way we live and interact with our surroundings.
          We envision spaces that blend form and function seamlessly, where aesthetics meet practicality, and where every design tells a unique story.</p>
-         <img src="pictures used/Image1.png">
+         <div class="imageBelow">
+            <img src="pictures used/Image1.jpg">
+          </div>
     </div>
 
 
