--- a/homepage.html
+++ b/homepage.html
@@ -17,7 +17,7 @@
     <flexbox>
       <div class="navbar">
         <p class="name"> UNIPROJECT</p>
-        <!-- <img src="pictures used/logo2.png" alt="logo" class="logo"> -->
+        
         <a href="homepage.html" class="button">Home</a>
         <a href="2dplanpage.html" class="button button-pink">2D Plan</a>
         <a href="3dversions.html" class="button button-blue">3D Version</a>
@@ -49,54 +49,18 @@
           </div>
     </div>
 
-
-  
-  <!-- <div class="slideshow-container">
-    <div class="mySlides">
-      <img src="pictures used/Image1.png" alt="Image 1">
-    </div>
-
-    <div class="mySlides">
-      <img src="pictures used/Image2.png" alt="Image 2">
-    </div>
-
-    <div class="mySlides">
-      <img src="pictures used/Image3.png" alt="Image 3">
-    </div>
-  </div>
-
--->
-
-
   <script>
-
-    // let slideIndex = 0;
-    // showSlides();
-
-    // function showSlides() {
-    //   let i;
-    //   const slides = document.getElementsByClassName("mySlides");
-    //   for (i = 0; i < slides.length; i++) {
-    //     slides[i].style.display = "none";
-    //   }
-    //   slideIndex++;
-    //   if (slideIndex > slides.length) {
-    //     slideIndex = 1;
-    //   }
-    //   slides[slideIndex - 1].style.display = "block";
-    //   setTimeout(showSlides, 2000);
-    // }
 
 
     document.addEventListener("DOMContentLoaded", function () {
-  // Use JavaScript to control the visibility of the text elements
+  
   setTimeout(function () {
     const welcomeText = document.getElementById('welcome');
     const text1 = document.getElementById('text1');
 
-    welcomeText.style.display = 'none'; // Hide the "Welcome" text
-    text1.style.display = 'block'; // Show the replacement text
-  }, 3000); // Adjust the time in milliseconds (3000 = 3 seconds)
+    welcomeText.style.display = 'none'; 
+    text1.style.display = 'block'; 
+  }, 3000); 
 });
 
 
