--- a/2dplanpage.html
+++ b/2dplanpage.html
@@ -6,22 +6,24 @@
   <link rel="stylesheet" href="projekti.css">
   <title></title>
 
- <header>
-  <flexbox>
-    <div class="navbar">
-        <img src="pictures used/logo2.png" alt="logo" class="logo">
-      <a href="homepage.html" class="button">Home</a>
-      <a href="2dplanpage.html" class="button button-pink">2D Plan</a>
-      <a href="3dversions.html" class="button button-blue">3D Version</a>
-      <a href="aboutus.html" class="button button-yellow">About Us</a>
-      <a href="register.html" class="button button-yellow">Login or Register</a>
-    </div>
+ 
+  <header>
+    <flexbox>
+      <div class="navbar">
+        <p class="name"> UNIPROJECT</p>
+        <!-- <img src="pictures used/logo2.png" alt="logo" class="logo"> -->
+        <a href="homepage.html" class="button">Home</a>
+        <a href="2dplanpage.html" class="button button-pink">2D Plan</a>
+        <a href="3dversions.html" class="button button-blue">3D Version</a>
+        <a href="aboutus.html" class="button button-yellow">About Us</a>
+        <a href="register.html" class="button button-yellow">Login or Register</a>
+      </div>
     </flexbox>
   </header>
 
 </head>
 <body>
-  <div class="slideshow-container">
+  <!-- <div class="slideshow-container">
     <div class="mySlides">
       <img src="pictures used/Image1.png" alt="Image 1">
     </div>
@@ -33,26 +35,26 @@
     <div class="mySlides">
       <img src="pictures used/Image3.png" alt="Image 3">
     </div>
-  </div>
+  </div> -->
 
   <script>
 
-    let slideIndex = 0;
-    showSlides();
+    // let slideIndex = 0;
+    // showSlides();
 
-    function showSlides() {
-      let i;
-      const slides = document.getElementsByClassName("mySlides");
-      for (i = 0; i < slides.length; i++) {
-        slides[i].style.display = "none";
-      }
-      slideIndex++;
-      if (slideIndex > slides.length) {
-        slideIndex = 1;
-      }
-      slides[slideIndex - 1].style.display = "block";
-      setTimeout(showSlides, 2000);
-    }
+    // function showSlides() {
+    //   let i;
+    //   const slides = document.getElementsByClassName("mySlides");
+    //   for (i = 0; i < slides.length; i++) {
+    //     slides[i].style.display = "none";
+    //   }
+    //   slideIndex++;
+    //   if (slideIndex > slides.length) {
+    //     slideIndex = 1;
+    //   }
+    //   slides[slideIndex - 1].style.display = "block";
+    //   setTimeout(showSlides, 2000);
+    // }
   </script>
 
 </body>
