--- a/2dplanpage.html
+++ b/2dplanpage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="projekti.css">
+  <link rel="stylesheet" href="2Dplan.css">
   <title></title>
 
  
@@ -23,6 +23,43 @@
 
 </head>
 <body>
+
+    <div class="main-content">
+      <h2 class="text1"> 2D PLANS</h2>
+      </div>
+
+    <div class="image-container">
+      <a href="pictures used/2Dplan1.png">
+        <img src="pictures used/2Dplan1.png" class="image">
+      </a>
+    </div>
+    <div class="image-container">
+      <a href="pictures used/2Dplan2.png">
+        <img src="pictures used/2Dplan2.png" class="image">
+      </a>
+    </div>
+    <div class="image-container">
+      <a href="pictures used/2Dplan3.png">
+        <img src="pictures used/2Dplan3.png" class="image">
+      </a>
+    </div>
+    <div class="image-container">
+      <a href="pictures used/2Dplan4.png">
+        <img src="pictures used/2Dplan4.png" class="image">
+      </a>
+    </div>
+    <div class="image-container">
+      <a href="pictures used/2Dplan5.jpg">
+        <img src="pictures used/2Dplan5.jpg" class="image">
+      </a>
+    </div>
+    <div class="image-container">
+      <a href="pictures used/2Dplan6.png">
+        <img src="pictures used/2Dplan6.png" class="image">
+      </a>
+    </div>
+
+
   <!-- <div class="slideshow-container">
     <div class="mySlides">
       <img src="pictures used/Image1.png" alt="Image 1">
