--- a/3dversions.html
+++ b/3dversions.html
@@ -3,57 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="projekti.css">
+  <link rel="stylesheet" href="3Dplan.css">
   <title></title>
 
- <header>
-  <flexbox>
-    <div class="navbar">
-        <img src="pictures used/logo2.png" alt="logo" class="logo">
-      <a href="homepage.html" class="button">Home</a>
-      <a href="2dplanpage.html" class="button button-pink">2D Plan</a>
-      <a href="3dversions.html" class="button button-blue">3D Version</a>
-      <a href="aboutus.html" class="button button-yellow">About Us</a>
-      <a href="register.html" class="button button-yellow">Login or Register</a>
-    </div>
+ 
+  <header>
+    <flexbox>
+      <div class="navbar">
+        <p class="name"> UNIPROJECT</p>
+        <a href="homepage.html" class="button">Home</a>
+        <a href="2dplanpage.html" class="button button-pink">2D Plan</a>
+        <a href="3dversions.html" class="button button-blue">3D Version</a>
+        <a href="aboutus.html" class="button button-yellow">About Us</a>
+        <a href="register.html" class="button button-yellow">Login or Register</a>
+      </div>
     </flexbox>
   </header>
 
 </head>
 <body>
-  <div class="slideshow-container">
-    <div class="mySlides">
-      <img src="pictures used/Image1.png" alt="Image 1">
+
+    <div class="main-content">
+      <h2 class="text1"> 3D VERSIONS</h2>
+      </div>
+
+    <div class="image-container">
+      <a href="pictures used/3dplan1.jpg">
+        <img src="pictures used/3dplan1.jpg" class="image">
+      </a>
     </div>
-
-    <div class="mySlides">
-      <img src="pictures used/Image2.png" alt="Image 2">
+    <div class="image-container">
+      <a href="pictures used/3dplan2.jpg">
+        <img src="pictures used/3dplan2.jpg" class="image">
+      </a>
     </div>
-
-    <div class="mySlides">
-      <img src="pictures used/Image3.png" alt="Image 3">
+    <div class="image-container">
+      <a href="pictures used/3dplan3.jpg">
+        <img src="pictures used/3dplan3.jpg" class="image">
+      </a>
     </div>
-  </div>
-
-  <script>
-
-    let slideIndex = 0;
-    showSlides();
-
-    function showSlides() {
-      let i;
-      const slides = document.getElementsByClassName("mySlides");
-      for (i = 0; i < slides.length; i++) {
-        slides[i].style.display = "none";
-      }
-      slideIndex++;
-      if (slideIndex > slides.length) {
-        slideIndex = 1;
-      }
-      slides[slideIndex - 1].style.display = "block";
-      setTimeout(showSlides, 2000);
-    }
-  </script>
 
 </body>
 <footer>
