--- a/2dplanpage.html
+++ b/2dplanpage.html
@@ -28,6 +28,7 @@
       <h2 class="text1"> 2D PLANS</h2>
       </div>
 
+      <div class="pictures">
     <div class="image-container">
       <a href="pictures used/2Dplan1.png">
         <img src="pictures used/2Dplan1.png" class="image">
@@ -57,41 +58,11 @@
       <a href="pictures used/2Dplan6.png">
         <img src="pictures used/2Dplan6.png" class="image">
       </a>
-    </div>
-
-
-  <!-- <div class="slideshow-container">
-    <div class="mySlides">
-      <img src="pictures used/Image1.png" alt="Image 1">
-    </div>
-
-    <div class="mySlides">
-      <img src="pictures used/Image2.png" alt="Image 2">
-    </div>
-
-    <div class="mySlides">
-      <img src="pictures used/Image3.png" alt="Image 3">
-    </div>
-  </div> -->
+    </div>>
+      </div>
 
   <script>
 
-    // let slideIndex = 0;
-    // showSlides();
-
-    // function showSlides() {
-    //   let i;
-    //   const slides = document.getElementsByClassName("mySlides");
-    //   for (i = 0; i < slides.length; i++) {
-    //     slides[i].style.display = "none";
-    //   }
-    //   slideIndex++;
-    //   if (slideIndex > slides.length) {
-    //     slideIndex = 1;
-    //   }
-    //   slides[slideIndex - 1].style.display = "block";
-    //   setTimeout(showSlides, 2000);
-    // }
   </script>
 
 </body>
