--- a/3dversions.html
+++ b/3dversions.html
@@ -52,6 +52,11 @@
     </div>
   </div>
 
+  <div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="img01">
+  </div>
+
   <script>
 
 
