--- a/3dversions.html
+++ b/3dversions.html
@@ -36,19 +36,19 @@
   <div class="image-container">
     <div class="image-description">
       <img src="pictures used/3dplan1.jpg" class="image">
-      <p>This is the 3D Plan for a basic 3 Bedroom apartment</p>
+      <p>This is the 3D Plan for a basic 3 Bedroom apartment.</p>
     </div>
   </div>
   <div class="image-container">
     <div class="image-description">
       <img src="pictures used/3dplan2.jpg" class="image">
-      <p>Description for Image 2</p>
+      <p>This is the 3D Plan for a 2 Bedroom apartment with a balcony.</p>
     </div>
   </div>
   <div class="image-container">
     <div class="image-description">
       <img src="pictures used/3dplan3.jpg" class="image">
-      <p>Description for Image 3</p>
+      <p>This is the 3D Plan for a 1 Bedorom apartment with a balcony on the smaller side.</p>
     </div>
   </div>
 
