--- a/login.html
+++ b/login.html
@@ -20,7 +20,8 @@
       }
 
       .login-container {
-        background-color: #fff;
+        background: transparent;
+        backdrop-filter: blur(4px);
         padding: 30px;
         border-radius: 8px;
         box-shadow: 0 0 50px rgba(10, 9, 9, 0.897);
@@ -29,7 +30,7 @@
       }
 
       .login-container h2 {
-        color: #333;
+        color: #ffffff;
         margin: 10px;
       }
 
@@ -52,6 +53,7 @@
       .passwordbox label {
         display: block;
         margin-bottom: 5px;
+        color:white;
       }
 
       .passwordbox input[type="password"] {
