Update ne homepage

--- a/homepage.html
+++ b/homepage.html
@@ -21,7 +21,6 @@
         <a href="homepage.html" class="button">Home</a>
         <a href="2dplanpage.html" class="button button-pink">2D Plan</a>
         <a href="3dversions.html" class="button button-blue">3D Version</a>
-        <a href="aboutus.html" class="button button-yellow">About Us</a>
         <a href="register.html" class="button button-yellow">Login or Register</a>
       </div>
     </flexbox>
@@ -47,6 +46,16 @@
          <div class="imageBelow">
             <img src="pictures used/Image1.jpg">
           </div>
+    </div>
+
+
+    <div class="content3">
+      <h2 id="title3"> Innovative Design </h2>
+      <p id="text3"> Explore a world of cutting-edge design concepts tailored to meet your specific needs. We strive to push the boundaries of traditional architecture, creating spaces that not only stand out but stand the test of time.
+      </p>
+      <div class="imageBelow">
+      <img src="pictures used/innovatiedesign.jpg">
+      </div>
     </div>
 
   <script>
