--- a/register.html
+++ b/register.html
@@ -7,7 +7,7 @@
   <title>Register</title>
   <style>
     body {
-      background-image: url(pictures\ used/architectural-design-header.jpg);
+      background-image: url(pictures\ used/login.jpg);
       background-size: cover;
       background-position: center;
       font-family: 'Arial', sans-serif;
@@ -20,7 +20,7 @@
     }
 
     .register-container {
-      background-color: #fff;
+      background-color: #dddbcd;
       padding: 30px;
       border-radius: 8px;
       box-shadow: 0 0 50px rgba(10, 9, 9, 0.897);
@@ -29,16 +29,22 @@
     }
 
     .register-container h2 {
-      color: #333;
+      color: #ffffff;
       margin: 10px;
     }
 
     .register-form {
       margin-top: 20px;
     }
+    
+
+  .emailbox label{
+    color: white;
+  }
     .usernamebox label {
   display: block;
   margin-bottom: 5px;
+  color: white;
 }
 
 .usernamebox input[type="text"] {
@@ -53,6 +59,7 @@
 .passwordbox label {
   display: block;
   margin-bottom: 5px;
+  color: white;
 }
 
 .passwordbox input[type="password"] {
@@ -71,15 +78,16 @@
   border-radius: 4px;
 }
 .register-form button {
+  margin-bottom: 5% ;
   padding: 10px 20px;
-  background-color: #007bff;
+  background-color: #6f4343c7;
   color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
 }
 .register-form button:hover {
-  background-color: #0056b3;
+  background-color: #4f3030c7;
 }
 
   </style>
@@ -111,7 +119,7 @@
     </div>
       <div class="form-group">
         <button type="submit">Register</button>
-        <p>If you already have an account, <a href="login.html">login here</a>.</p>
+        <p style="color:white">If you already have an account, <a href="login.html" style="color:#6f4343c7">login here</a>.</p>
       </div>
     </form>
   </div>
