--- a/3dversions.html
+++ b/3dversions.html
@@ -32,12 +32,12 @@
     <h2 class="text1"> 3D VERSIONS</h2>
   </div>
 
-
+  <div class="image-container">
     <div class="image-description">
       <img src="pictures used/3dplan1.jpg" class="image">
       <p>This is the 3D Plan for a basic 3 Bedroom apartment.</p>
     </div>
-  
+  </div>
   <div class="image-container">
     <div class="image-description">
       <img src="pictures used/3dplan2.jpg" class="image">
