--- a/homepage.html
+++ b/homepage.html
@@ -42,7 +42,8 @@
     <div class="content2">
       <h2 id="title2"> Our Vision</h2>
       <p id="text2">  Our vision is to redefine the way we live and interact with our surroundings.
-         We envision spaces that blend form and function seamlessly, where aesthetics meet practicality, and where every design tells a unique story.</p>
+         We envision spaces that blend form and function seamlessly, where aesthetics meet practicality, and where every design tells a unique story.
+         Step into a world of depth and dimension with our captivating <a href="3dversions.html" style="color: #6f4343c7;" >3D versions.</a></p>
          <div class="imageBelow">
             <img src="pictures used/Image1.jpg">
           </div>
@@ -51,7 +52,8 @@
 
     <div class="content3">
       <h2 id="title3"> Innovative Design </h2>
-      <p id="text3"> Explore a world of cutting-edge design concepts tailored to meet your specific needs. We strive to push the boundaries of traditional architecture, creating spaces that not only stand out but stand the test of time.
+      <p id="text3"> Explore a new world of cutting-edge design concepts tailored to meet your specific needs. We strive to push the boundaries of traditional architecture, creating spaces that not only stand out but stand the test of time.
+      Explore the intricacies of our vision through detailed <a href="2dplanpage.html" style="color:#6f4343c7">2D plans.</a>
       </p>
       <div class="imageBelow">
       <img src="pictures used/innovatiedesign.jpg">
