--- a/pictures used/Login.html
+++ b/pictures used/Login.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="projekti.css" />
+<!-- saved from url=(0072)file:///C:/Users/Elna%20Eshrefi/Documents/GitHub/projekti-ueb/login.html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./Login_files/projekti.css">
     <title>Login</title>
     <style>
       body {
@@ -40,7 +40,6 @@
       .usernamebox label {
         display: block;
         margin-bottom: 5px;
-        color: white;
       }
 
       .usernamebox input[type="text"] {
@@ -66,37 +65,32 @@
       }
       .login-form button {
         padding: 10px 20px;
-        background-color: #6f4343c7;
+        background-color: #007bff;
         color: white;
         border: none;
         border-radius: 4px;
         cursor: pointer;
       }
       .login-form button:hover {
-        background-color: #503030c7;
+        background-color: #0056b3;
       }
     </style>
   </head>
   <body>
     <div class="login-container">
       <h2>Login</h2>
-      <form
-        class="login-form"
-        action="/login"
-        method="post"
-        onsubmit="validateForm(event)"
-      >
+      <form class="login-form" action="file:///C:/login" method="post" onsubmit="validateForm(event)">
         <div class="form-group">
           <div class="usernamebox">
             <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required />
+            <input type="text" id="username" name="username" required="">
             <div id="usernameError" style="color: red;"></div>
           </div>
         </div>
         <div class="form-group">
           <div class="passwordbox">
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required />
+            <input type="password" id="password" name="password" required="">
             <div id="passwordError" style="color: red;"></div>
           </div>
         </div>
@@ -150,5 +144,6 @@
     
 
     </script>
-  </body>
-</html>
+  
+
+</body></html>
