--- a/3dversions.html
+++ b/3dversions.html
@@ -32,33 +32,25 @@
     <h2 class="text1"> 3D VERSIONS</h2>
   </div>
 
-  <div class="image-grid">
   <div class="image-container">
     <div class="image-description">
       <img src="pictures used/3dplan1.jpg" class="image">
       <p>This is the 3D Plan for a basic 3 Bedroom apartment.</p>
     </div>
+  </div>
+  <div class="image-container">
+    <div class="image-description">
+      <img src="pictures used/3dplan2.jpg" class="image">
+      <p>This is the 3D Plan for a 2 Bedroom apartment with a balcony.</p>
+    </div>
+  </div>
+  <div class="image-container">
+    <div class="image-description">
+      <img src="pictures used/3dplan3.jpg" class="image">
+      <p>This is the 3D Plan for a 1 Bedorom apartment with a balcony on the smaller side.</p>
+    </div>
+  </div>
 
-
-  <div class="image-container">
-    <div class="additional-images">
-      <img src="pictures used/3dplan4.jpg" class="image">
-      <p>This is the 3D Plan for a spacious 3 Bedroom apartment.</p>
-    </div>
-  </div>
-  <div class="image-container">
-    <div class="additional-images">
-      <img src="pictures used/3dplan5.jpg" class="image">
-      <p>This is the 3D Plan for a luxury 4 Bedroom apartment.</p>
-    </div>
-  </div>
-  <div class="image-container">
-    <div class="additional-images">
-      <img src="pictures used/3dplan6.jpg" class="image">
-      <p>This is the 3D Plan for a penthouse suite.</p>
-    </div>
-  </div>
-</div>
   <div id="myModal" class="modal">
     <span class="close">&times;</span>
     <img class="modal-content" id="img01">
