--- a/3dversions.html
+++ b/3dversions.html
@@ -36,10 +36,6 @@
     <div class="image-description">
       <img src="pictures used/3dplan1.jpg" class="image">
       <p>This is the 3D Plan for a basic 3 Bedroom apartment.</p>
-    </div>
-  </div>
-  <div class="image-container">
-    <div class="image-description">
       <img src="pictures used/3dplan2.jpg" class="image">
       <p>This is the 3D Plan for a 2 Bedroom apartment with a balcony.</p>
     </div>
@@ -47,7 +43,17 @@
   <div class="image-container">
     <div class="image-description">
       <img src="pictures used/3dplan3.jpg" class="image">
-      <p>This is the 3D Plan for a 1 Bedorom apartment with a balcony on the smaller side.</p>
+      <p>This is the 3D Plan for a 1 Bedroom small apartment.</p>
+      <img src="pictures used/3dplan4.jpg" class="image">
+      <p>This is the 3D Plan for a big apartment with a big balcony.</p>
+    </div>
+  </div>
+  <div class="image-container">
+    <div class="image-description">
+      <img src="pictures used/3dplan5.jpg" class="image">
+      <p>This is the 3D Plan for a 1 Bedorom apartment with a garage.</p>
+      <img src="pictures used/3dplan6.jpg" class="image">
+      <p>This is the 3D Plan for a basic 2 Bedroom middle apartment.</p>
     </div>
   </div>
 
